--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -19,6 +19,6 @@ RUN az extension add --name azure-cli-iot-ext
 # COPY Dockerfile /cnab/Dockerfile
 # COPY app /cnab/app
 
-CMD ["/cnab/app/run"]
+# CMD ["/cnab/app/run"]
 
 
