--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -1,24 +1,15 @@
 FROM mcr.microsoft.com/azure-cli AS cli-base
 
+ARG BUNDLE_DIR
+
 RUN apk update
 RUN apk add -u bash
-
- # Set the working directory to /app
-#WORKDIR /app
-
-# Copy the current directory contents into the container at /app
-#COPY . /app
 
 # Install any needed packages specified in requirements.txt
 RUN az extension add --name azure-cli-iot-ext
 
 # Use the BUNDLE_DIR build argument to copy files into the bundle
-# COPY . $BUNDLE_DIR
+COPY . $BUNDLE_DIR
 
-# this was in the duffle version
-# COPY Dockerfile /cnab/Dockerfile
-# COPY app /cnab/app
-
-# CMD ["/cnab/app/run"]
 
 
